<resources>
    <string name="app_name">Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_to_shopiko">Shopiko</string>
    <string name="refreshment_tech_limited"><![CDATA[Refreshment & Tech limited]]></string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="top">TODO</string>
    <string name="bottom">BOTTOM</string>
    <string name="all">ALL</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="i_don_t_have_a_store">I don\'t have a store?</string>
    <string name="create_one">Create one</string>
    <string name="create_shop">Create Shop</string>
    <string name="enter_your_shop_name">Enter your Shop Name</string>
    <string name="email_up">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_password_up">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered !!</string>
    <string name="sign_in_p">Sign In</string>
    <string name="todo5">TODO</string>
    <string name="dashboard">Dashboard</string>
    <string name="sell">Sell</string>
    <string name="catalog">Catalog</string>
    <string name="analytics">Sales</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="analysis">Analysis</string>
    <string name="help_faq">Help/FAQ</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="category">Category</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="enter_category">Enter category</string>
    <string name="product_description">Product description</string>
    <string name="c_p">C.P</string>
    <string name="s_p">S.P</string>
    <string name="product_quantity">Product quantity</string>
    <string name="product_name_placeholder">Product Name</string>
    <string name="enter_profit_percentage">Enter profit percentage</string>
    <string name="percentage_symbol">%</string>
    <string name="percentage_text">Total percentage per product sold</string>
    <string name="note_msg">This field reflect the profit to be made per product sold</string>
    <string name="log_out">Log Out</string>
    <string name="add_a_description">Add a description...</string>
    <string name="qty">Qty</string>
    <string name="c_pr">C.P</string>
    <string name="s_pr">S.P</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="addp">ADD</string>
    <string name="name">Name</string>
    <string name="cost_price">Cost Price:</string>
    <string name="category_name">category_name</string>
    <string name="profit">Profit:</string>
    <string name="_200">200</string>
    <string name="quantityV">Quantity</string>
    <string name="_18_left_in_stock">18 left in stock</string>
    <string name="description">Description</string>
    <string name="product_descriptionV">product description</string>
    <string name="add_to_sell">Add to sell</string>
    <string name="edit">Edit</string>
    <string name="_300">200</string>
    <string name="back">BACK</string>
    <string name="categoryV">Category:</string>
    <string name="category_nameV">category_name</string>
    <string name="selling_price">Selling Price:</string>
    <string name="_20">20</string>
    <string name="laptop">Laptop</string>
    <string name="_5">5</string>
    <string name="_2000">200</string>
    <string name="percentage_profit">Percentage profit</string>
    <string name="jargon">You can generate up to 50 random English words at a time. To get more words, just click the “Generate Words” button to generate a new list of words. Note that the selected words in the textarea will still be there even after you click the “Generate Words” button</string>
    <string name="todo_edit">TODO</string>
    <string name="todo_del">TODO</string>
    <string name="todo_read">TODO</string>
    <string name="enter_product_description">Enter Product Description</string>
    <string name="shophub">ShopHub</string>
    <string name="equity">CALCULATE PROFIT</string>
    <string name="adelight_gmail_com">adelight@gmail.com</string>
    <string name="textview">TextView</string>
    <string name="adds">ADD</string>
    <string name="store">STORE</string>
    <string name="save">SAVE</string>
    <string name="product_name">Product Name</string>
    <string name="sales">Sales</string>
    <string name="gross_profit_margin">Gross Profit Margin</string>

</resources>